# project_V4L2

./: CMakeLists.txt  README.md  qtbuild.sh  qtrun.sh  runcam.sh
src/: YUVDecoder.cpp  YUVDecoder.h  main.cpp  mainwidget.cpp  mainwidget.h  v4l2_test  v4l2_test.cpp  widget.cpp  widget.h
ui/: mainwidget.ui  widget.ui
